2006-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am: 
	* gnobots2.desktop.in: Replace the PNG icon with an SVG icon from
	Nicu Buculei.

	* gnobots.c: Patch from Scott Bronson to ensure user-edited
	accelerators are saved (bug #327280).

2006-01-16  Callum McKenzie  <callum@spooky-possum.org>

	* robots.png: New graphics from Nicu Buculei. Also added the
	source robots.svg file for future use.

2006-01-12  Richard Hoelscher  <rah@rahga.com>

	* game.c (mouse_cb): Fix safe moves + mouse control. See bug #169765.

2005-10-02  Callum McKenzie  <callum@spooky-possum.org>

	* graphics.c (set_background_color): Use gtk_widget_modify_bg
	rather than setting the GdkWindow background colour directly. This
	stops it being overwritten. See bug #317522.

2005-08-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/da/gnobots2.xml:
	* help/C/gnobots2.xml: Remove the mention of the
	no-longer-existing bug reporting guidelines. See bug #312723.

2005-07-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c: 
	* gnobots.c: Remove the handlebox for consistency.

	* properties.c: Remove the properties display and all the
	associated code. It isn't necessary.

2005-07-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/figures/gnobots2-main.png: Update with the restored
	icons.

	* menu.c: Use the proper icons for teleport and random teleport.

2005-07-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/figures/*:
	* help/C/gnobots2.xml: Bump the version number and redo the
	screenshots.

2005-07-17  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gameconfig.c (load_config): The while loop had a bad termination
	condition (bptr rather than *bptr). Fortunately there was another
	way out (and also fortunate that this is trusted data, there is
	basically no error checking in that routine). 

2005-07-11  Richard Hoelscher  <rah@rahga.com>

	* gnobots.c (main): Fix keyboard accelerators.
	* menu.c: Make ui_description readonly.
